# dbx_pipeline

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: dbx_ci.yml
resources/: dbx_data_pipeline.job.yml  dbx_data_pipeline.pipeline.yml
scratch/: exploration.ipynb
src/Notebooks/Demo_CDC/: bronze.py  config.yml  requirements.py  silver.py
src/Notebooks/Demo_Pipeline/: Demo_dlt.py
src/dbx_data_pipeline/: main.py
tests/: main_test.py  test_main.py
